ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/Key_Fact_Statement__c.object-meta.xml
<CustomObject>
    <label>Key Fact Statement</label>
    <nameField>
        <label>KFS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Fact Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>