ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Advance_EMI_Number__c.field-meta.xml
<CustomField>
    <fullName>Advance_EMI_Number__c</fullName>
    <label>Advance EMI Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>