ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/APR__c.field-meta.xml
<CustomField>
    <fullName>APR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>APR</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>