ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Beneficiary_Code__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Code__c</fullName>
    <label>Beneficiary Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>