ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/BL_Name__c.field-meta.xml
<CustomField>
    <fullName>BL_Name__c</fullName>
    <label>BL Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>