ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>CRM_IRR__c</fullName>
    <label>CRM IRR</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>