ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Date__c</fullName>
    <label>Deal Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>