ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <label>Deal Number</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>