ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Deal_Period__c.field-meta.xml
<CustomField>
    <fullName>Deal_Period__c</fullName>
    <label>Deal Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>