ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Dealer_Sub_dealer_name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Sub_dealer_name__c</fullName>
    <label>Dealer/Sub-dealer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>