ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Document_Charges_Without_Gst__c.field-meta.xml
<CustomField>
    <fullName>Document_Charges_Without_Gst__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Document Charges Without Gst</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>