ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Effetive_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Effetive_From_Date__c</fullName>
    <label>Effetive From Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>