ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/First_EMI_Date__c.field-meta.xml
<CustomField>
    <fullName>First_EMI_Date__c</fullName>
    <label>First EMI Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>