ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Gross_IRR__c.field-meta.xml
<CustomField>
    <fullName>Gross_IRR__c</fullName>
    <label>Gross IRR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>