ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Gross_LTV__c.field-meta.xml
<CustomField>
    <fullName>Gross_LTV__c</fullName>
    <label>Gross LTV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>