ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/IHM_Computed__c.field-meta.xml
<CustomField>
    <fullName>IHM_Computed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IHM Computed</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>