ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Installment_Pattern_Type__c.field-meta.xml
<CustomField>
    <fullName>Installment_Pattern_Type__c</fullName>
    <label>Installment Pattern Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>