ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Instalment_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Numbers__c</fullName>
    <label>Instalment Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>