ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_Flexi_Fund_Type_G__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Flexi_Fund_Type_G__c</fullName>
    <label>Insurance Flexi Fund Type G</label>
    <length>100</length>
    <type>Text</type>
</CustomField>