ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_GPA_Premium_G__c.field-meta.xml
<CustomField>
    <fullName>Insurance_GPA_Premium_G__c</fullName>
    <label>Insurance GPA Premium G</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>