ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_GPA_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_GPA_Type__c</fullName>
    <label>Insurance GPA Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>