ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium__c</fullName>
    <label>Insurance Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>