ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_Premium_Paid_I__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium_Paid_I__c</fullName>
    <label>Insurance Premium Paid I</label>
    <length>50</length>
    <type>Text</type>
</CustomField>