ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_Subh_Raksha_Premium__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Subh_Raksha_Premium__c</fullName>
    <label>Insurance Subh Raksha Premium</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>