ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_Tata_Emi_Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Tata_Emi_Fund_Type__c</fullName>
    <label>Insurance Tata Emi Fund Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>