ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Insurance_Tata_Emi_Premium__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Tata_Emi_Premium__c</fullName>
    <label>Insurance Tata Emi Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>