ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>