ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Key_Fact_Statement__c.field-meta.xml
<CustomField>
    <fullName>Key_Fact_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Fact Statement</label>
    <referenceTo>Key_Fact_Statement__c</referenceTo>
    <relationshipLabel>Key Fact Statements</relationshipLabel>
    <relationshipName>Key_Fact_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>