ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Keyfact_Consent_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Keyfact_Consent_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keyfact Consent Accepted?</label>
    <type>Checkbox</type>
</CustomField>