ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Keyfact_Consent_OTP__c.field-meta.xml
<CustomField>
    <fullName>Keyfact_Consent_OTP__c</fullName>
    <label>Keyfact Consent OTP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>