ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Keyfact_Consent_Received_Time__c.field-meta.xml
<CustomField>
    <fullName>Keyfact_Consent_Received_Time__c</fullName>
    <label>Keyfact Consent Received Time</label>
    <type>DateTime</type>
</CustomField>