ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Keyfact_Form_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Keyfact_Form_SMS_Sent__c</fullName>
    <label>Keyfact Form SMS Sent</label>
    <type>DateTime</type>
</CustomField>