ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <label>Lead Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>