ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Loan_Amount_Chassis__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Chassis__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loan Amount Chassis</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>