ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Key Fact Statements</relationshipLabel>
    <relationshipName>Key_Fact_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>