ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/MCLR__c.field-meta.xml
<CustomField>
    <fullName>MCLR__c</fullName>
    <label>MCLR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>