ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Mfg_Year__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Year__c</fullName>
    <label>Mfg Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>