ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Moratorium__c.field-meta.xml
<CustomField>
    <fullName>Moratorium__c</fullName>
    <label>Moratorium</label>
    <length>50</length>
    <type>Text</type>
</CustomField>