ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Net_Disburse_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Disburse_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Net Disburse Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>