ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Net_Disbursement_APR__c.field-meta.xml
<CustomField>
    <fullName>Net_Disbursement_APR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Net Disbursement APR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>