ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/ProCredit_Deal__c.field-meta.xml
<CustomField>
    <fullName>ProCredit_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProCredit Deal</label>
    <referenceTo>ProCredit_Deals__c</referenceTo>
    <relationshipLabel>Key Fact Statements</relationshipLabel>
    <relationshipName>Key_Fact_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>