ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Second_EMI_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_EMI_Date__c</fullName>
    <label>Second EMI Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>