ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Service_Charges__c.field-meta.xml
<CustomField>
    <fullName>Service_Charges__c</fullName>
    <label>Service Charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>