ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Service_Charges_Gst_Value__c.field-meta.xml
<CustomField>
    <fullName>Service_Charges_Gst_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Charges Gst Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>