ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Sold_By_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Dealer_Name__c</fullName>
    <label>Sold By Dealer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>