ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Total_Amount_Paid_By_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid_By_Borrower__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Amount Paid By Borrower</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>