ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Total_Insurance_Funded_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Total_Insurance_Funded_By_Customer__c</fullName>
    <label>Total Insurance Funded By Customer</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>