ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Type_Of_Instalments__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Instalments__c</fullName>
    <label>Type Of Instalments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>