ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Valuation_price__c.field-meta.xml
<CustomField>
    <fullName>Valuation_price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valuation price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>