ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Varient_Code__c.field-meta.xml
<CustomField>
    <fullName>Varient_Code__c</fullName>
    <label>Varient Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>