ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>