ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Vehicle_Registration_number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_number__c</fullName>
    <label>Vehicle Registration number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>