ProdIND/ProdPrograms/force-app/main/default/objects/Key_Fact_Statement__c/fields/Vehicle_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sub_Category__c</fullName>
    <label>Vehicle Sub Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>